# swagger/swagger.json
@@ -91,7 +91,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/uatu.Dex"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/uatu.Dex"
+                                            }
                                         }
                                     }
                                 }
@@ -279,8 +282,26 @@
                             "$ref": "#/definitions/server.APIResponse"
                         }
                     },
+                    "413": {
+                        "description": "Request Entity Too Large",
+                        "schema": {
+                            "$ref": "#/definitions/server.APIResponse"
+                        }
+                    },
+                    "415": {
+                        "description": "Unsupported Media Type",
+                        "schema": {
+                            "$ref": "#/definitions/server.APIResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.APIResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/server.APIResponse"
                         }
@@ -340,8 +361,26 @@
                             "$ref": "#/definitions/server.APIResponse"
                         }
                     },
+                    "413": {
+                        "description": "Request Entity Too Large",
+                        "schema": {
+                            "$ref": "#/definitions/server.APIResponse"
+                        }
+                    },
+                    "415": {
+                        "description": "Unsupported Media Type",
+                        "schema": {
+                            "$ref": "#/definitions/server.APIResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/server.APIResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/server.APIResponse"
                         }
@@ -647,7 +686,6 @@
             "type": "object",
             "required": [
                 "amount",
-                "chain",
                 "chainId",
                 "recipientAddress",
                 "tokenIn",
@@ -655,9 +693,6 @@
             ],
             "properties": {
                 "amount": {
-                    "type": "string"
-                },
-                "chain": {
                     "type": "string"
                 },
                 "chainId": {
